base/auth-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy-service
  labels:
    app: auth-proxy
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: auth-proxy
