base/auth-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-proxy-ingress
  labels:
    app: auth-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: api.vatusa.dev
    http:
      paths:
      - backend:
          service:
            name: auth-proxy-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: sso.vatusa.dev
    http:
      paths:
      - backend:
          service:
            name: auth-proxy-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.vatusa.dev
    - sso.vatusa.dev
    secretName: proxy-vatusa-dev-tls
